<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2014-2016 The OmniROM Project
     Copyright (C) 2021-2022 The Evolution X Project
     Copyright (C) 2018-2021 crDroid Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:settings="http://schemas.android.com/apk/res/org.evolution.oneplus.DeviceExtras"
 	android.title="@string/device_extras_title">

    <!-- Start of alert slider Category -->
    <PreferenceCategory
        android:key="slider"
        android:title="@string/notification_slider_category_title">

        <ListPreference
            android:key="slider_usage"
            android:dialogTitle="@string/notification_slider_usage_title"
            android:title="@string/notification_slider_usage_title"
            android:entries="@array/notification_slider_usage_entries"
            android:entryValues="@array/notification_slider_usage_entry_values"
            android:summary="%s" />

        <ListPreference
            android:key="action_top_position"
            android:dialogTitle="@string/notification_slider_selection_dialog_title"
            android:title="@string/notification_slider_top_position"
            android:summary="%s" />

        <ListPreference
            android:key="action_middle_position"
            android:dialogTitle="@string/notification_slider_selection_dialog_title"
            android:title="@string/notification_slider_middle_position"
            android:summary="%s" />

        <ListPreference
            android:key="action_bottom_position"
            android:dialogTitle="@string/notification_slider_selection_dialog_title"
            android:title="@string/notification_slider_bottom_position"
            android:summary="%s" />
    </PreferenceCategory>

    <!-- Start of audio Category -->
    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_title">

        <Preference
            android:key="audio_dolby_atmos"
            android:title="@string/dolby_title"
            android:summary="@string/dolby_summary" >
            <intent                  
                android:targetPackage="com.motorola.dolby.dolbyui"
                android:targetClass="com.motorola.dolby.dolbyui.MotoMainActivity" />
        </Preference>
    </PreferenceCategory>

    <!-- Start of display Category -->
    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="advanced_doze_settings"
            android:title="@string/ambient_display_gestures_title"
            android:summary="@string/ambient_display_gestures_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetClass="org.evolution.oneplus.DeviceExtras.doze.DozeSettingsActivity" />
        </Preference>

       <Preference
            android:key="panel_modes"
            android:title="@string/panel_modes_title"
            android:summary="@string/panel_modes_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.evolution.oneplus.DeviceExtras"
                    android:targetClass="org.evolution.oneplus.DeviceExtras.panelsettings.PanelSettingsActivity" />
        </Preference>

        <Preference
            android:key="kcal"
            android:title="@string/kcal_settings_title"
            android:summary="@string/kcal_settings_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.evolution.oneplus.DeviceExtras"
                    android:targetClass="org.evolution.oneplus.DeviceExtras.kcal.KcalSettingsActivity" />
        </Preference>

        <SwitchPreference
            android:key="dc"
            android:title="@string/dc_mode_title"
            android:summary="@string/dc_mode_summary" />

        <SwitchPreference
            android:key="hbm"
            android:title="@string/hbm_mode_title"
            android:summary="@string/hbm_mode_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="auto_hbm"
            android:title="@string/auto_hbm_title"
            android:summary="@string/auto_hbm_summary" />

        <org.evolution.oneplus.DeviceExtras.preferences.AutoHBMThresholdPreference
            android:key="auto_hbm_threshold"
            android:title="@string/auto_hbm_threshold_title"
            android:summary="@string/auto_hbm_threshold_summary" />
			
        <Preference
            android:key="hbm_info"
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/hbm_mode_warning" 
            android:persistent="false" />
    </PreferenceCategory>

    <!-- Start of fps Category -->
    <PreferenceCategory
        android:key="fps"
        android:title="@string/fps_title">

        <SwitchPreference
            android:key="fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <ListPreference
            android:key="fps_info_position"
            android:defaultValue="0"
            android:title="@string/fps_info_position_title"
            android:summary="%s"
            android:entries="@array/fps_info_position_entries"
            android:entryValues="@array/fps_info_position_values" />

        <ListPreference
            android:key="fps_info_color"
            android:defaultValue="0"
            android:title="@string/fps_info_color_title"
            android:summary="%s"
            android:entries="@array/fps_info_color_entries"
            android:entryValues="@array/fps_info_color_values" />

        <org.evolution.oneplus.DeviceExtras.preferences.CustomSeekBarPreference
            android:key="fps_info_text_size"
            android:title="@string/fps_info_text_size_title"
            android:persistent="true"
            android:max="5"
            android:min="1"
            settings:units=""
            android:defaultValue="3" />
    </PreferenceCategory>

    <!-- Start of touchscreen Category -->
    <PreferenceCategory
        android:key="touchscreen"
        android:title="@string/touchscreen_title">

        <Preference
            android:key="touchscreen_gestures"
            android:title="@string/touchscreen_gesture_settings_title"
            android:summary="@string/touchscreen_gesture_settings_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.evolution.oneplus.DeviceExtras"
                    android:targetClass="org.evolution.oneplus.DeviceExtras.touch.TouchscreenGestureSettings" />
        </Preference>

        <SwitchPreference
            android:key="game_mode"
            android:summary="@string/game_mode_summary"
            android:title="@string/game_mode_title" />

        <Preference
            android:key="game_mode_warning"
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/game_mode_warning"
            android:persistent="false" />

        <SwitchPreference
            android:key="tp_edge_limit"
            android:summary="@string/tp_edge_limit_mode_summary"
            android:title="@string/tp_edge_limit_mode_title" />
    </PreferenceCategory>

    <!-- Start of speaker & microphone Category -->
    <PreferenceCategory
        android:key="speaker"
        android:title="@string/category_speaker">

        <org.evolution.oneplus.DeviceExtras.preferences.EarGainPreference
            android:key="earpiece_gain"
            android:title="@string/ear_gain_title"
            android:summary="@string/ear_gain_summary" />

        <org.evolution.oneplus.DeviceExtras.preferences.MicGainPreference
            android:key="microphone_gain"
            android:title="@string/mic_gain_title"
            android:summary="@string/mic_gain_summary" />
    </PreferenceCategory>

    <!-- Start of usb Category -->
    <PreferenceCategory
        android:key="usb"
        android:title="@string/usb_title">

        <SwitchPreference
            android:key="usb2_fast_charge"
            android:summary="@string/usb2_fc_summary"
            android:title="@string/usb2_fc_title" />

        <SwitchPreference
            android:key="otg"
            android:summary="@string/otg_summary"
            android:title="@string/otg_title" />
    </PreferenceCategory>

    <!-- Start of vibrator Category -->
    <PreferenceCategory
        android:key="vibrator"
        android:title="@string/category_vibrator">

        <org.evolution.oneplus.DeviceExtras.preferences.VibratorStrengthPreference
            android:key="vib_strength"
            android:title="@string/vib_strength_title"
            android:summary="@string/vib_strength_summary" />

        <org.evolution.oneplus.DeviceExtras.preferences.VibratorCallStrengthPreference
            android:key="vib_call_strength"
            android:title="@string/vib_call_strength_title"
            android:summary="@string/vib_call_strength_summary" />

        <org.evolution.oneplus.DeviceExtras.preferences.VibratorNotifStrengthPreference
            android:key="vib_notif_strength"
            android:title="@string/vib_notif_strength_title"
            android:summary="@string/vib_notif_strength_summary" />
    </PreferenceCategory>
</PreferenceScreen>
